htdocs/view.php (bug fix): make "Later" link show up correctly (off-by-one error). skins/default/view.css: "pointer" cursor on {expand,collapse}-bar.

--- a/htdocs/skins/default/view.css
+++ b/htdocs/skins/default/view.css
@@ -236,6 +236,7 @@ input[type="checkbox"].mark-check {
 	background-color:	#6060ff;
 	color:			white;
 	text-align:		center;
+	cursor:			pointer;
 }
 
 /* Control box at bottom of item */
